[gd_scene load_steps=7 format=3 uid="uid://bbn7naqoe3sf5"]

[ext_resource type="Script" path="res://src/Objects/crate_2.gd" id="1_8lraw"]
[ext_resource type="Texture2D" uid="uid://12mq1a6g8wal" path="res://assets/kenney_1-bit-platformer-pack/Tilemap/monochrome_tilemap_transparent_packed.png" id="2_db886"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6y7gv"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lrov"]
size = Vector2(14, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_verxp"]
size = Vector2(1, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8i0at"]
size = Vector2(1, 11)

[node name="Crate_2" type="CharacterBody2D" groups=["Crates"]]
collision_layer = 4
collision_mask = 23
script = ExtResource("1_8lraw")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0.105882, 1)
texture = ExtResource("2_db886")
hframes = 20
vframes = 20
frame = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6y7gv")

[node name="PushFromLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)
collision_mask = 2

[node name="BoxDetectLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)
collision_mask = 4

[node name="PushFromRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)
collision_mask = 2

[node name="BoxDetectRight" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)
collision_mask = 4

[node name="Standing1" type="RayCast2D" parent="."]
target_position = Vector2(0, -24)

[node name="Standing2" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, -24)

[node name="Standing3" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, -24)

[node name="StandArea" type="StaticBody2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandArea"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_4lrov")

[node name="PlayerBlocker" type="StaticBody2D" parent="."]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBlocker"]
position = Vector2(-6.5, 0.5)
shape = SubResource("RectangleShape2D_verxp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerBlocker"]
position = Vector2(6.5, 0.5)
shape = SubResource("RectangleShape2D_8i0at")
